[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LeaderboardScreen.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Buttons/SceneChange.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Leaderboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/LinLibertine.tres" type="DynamicFont" id=4]

[node name="Leaderboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="."]
margin_left = 220.0
margin_top = 145.0
margin_right = 290.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 35, -100 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 310.0
margin_top = 145.0
margin_right = 380.0
margin_bottom = 175.0
text = "Menu"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
scene = "res://Scenes/Screens/Menu.tscn"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="TimeLabel" type="Label" parent="."]
margin_left = 220.0
margin_top = 65.0
margin_right = 380.0
margin_bottom = 80.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="."]
margin_left = 220.0
margin_top = 120.0
margin_right = 380.0
margin_bottom = 136.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="."]
margin_left = 220.0
margin_top = 100.0
margin_right = 380.0
margin_bottom = 120.0
placeholder_text = "Enter your name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 10.0
margin_right = -193.0
margin_bottom = -15.0

[node name="DeathLabel" type="Label" parent="."]
margin_left = 220.0
margin_top = 50.0
margin_right = 380.0
margin_bottom = 65.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 205.0
margin_right = 400.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
text = "Leaderboard"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="focus_entered" from="Name" to="." method="_on_Name_focus_entered"]
[connection signal="focus_exited" from="Name" to="." method="_on_Name_focus_exited"]
[connection signal="text_entered" from="Name" to="." method="_on_Name_text_entered"]
